cholera 0.5.9.9014
==================

- update README.
- add case.location argument for "address" or "nominal" for cases and pumps in
  addNeighborhoodEuclidean().


cholera 0.5.9.9013
==================

- begin revising documentation.


cholera 0.5.9.9012
==================

- add case.location argument for "address" or "nominal" for cases and pumps in
  addVoronoi(), euclideanDistance(), euclideanPath() and
  neighborhoodEuclidean().


cholera 0.5.9.9011
==================

- add case.location argument for "address" or "regular" for cases in
  addVoronoi(), euclideanDistance(), euclideanPath() and
  neighborhoodEuclidean().


cholera 0.5.9.9010
==================

- use voronoiPolygons() in neighborhoodVornoi().


cholera 0.5.9.9009
==================

- add voronoiPolygons().


cholera 0.5.9.9008
==================

- note unitMeter(dist(regular.cases[1:2, ])) in pump neighborhood vignette.
- remove fourCorners().


cholera 0.5.9.9007
==================

- use tsp.method argument for travelingSalesman().


cholera 0.5.9.9006
==================

- use alpha transparency for polygon periphery in addSnow() and addNeighborhoodWalking().


cholera 0.5.9.9005
==================

- add warning about valid methods for travelingSalesman().


cholera 0.5.9.9004
==================

- pass line.width argument to addSnow(type = "perimeter").


cholera 0.5.9.9003
==================

- add draft note "pearl strings to polygons".
- set in-progress messages plot.euclidean() and plot.walking() to FALSE.


cholera 0.5.9.9002
==================

- pearlString2() -> travelingSalesman().
- add polygon.method argument to addNeighborhoodEuclidean(), addNeighborhoodWalking(), plot.euclidean() and plot.walking().


cholera 0.5.9.9001
==================

- add addNeighborhoodCases(metric = "euclidean").


cholera 0.5.9.9000
==================

- CRAN release candidate.


cholera 0.5.1.9055
==================

- add pearlString2() beta.